--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^2.5.6",
     "heredoc": "^1.3.1",
     "koa": "^2.3.0",
+    "lodash": "^4.17.4",
     "promise": "^8.0.1",
     "raw-body": "^2.2.0",
     "request": "^2.81.0",
